# xdiff

./: Cargo.toml  README.md
examples/: config.rs
fixtures/: test.yml
src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  utils.rs
