[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
http-serde = "2.1.0"
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
similar = { version = "2.5.0", features = ["bytes", "inline"] }
tokio = { version = "1.37.0", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }
